[package]
name = "nvapi_sys_new"
version = "0.1.5"
edition = "2021"
description = "Updated NVAPI bindings"
documentation = "https://github.com/sqooid/nvapi"
homepage = "https://github.com/sqooid/nvapi"
repository = "https://github.com/sqooid/nvapi"
license = "MIT"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]