[package]
name = "nvapi_sys_new"
version = "1.530.0"
edition = "2021"
description = "Updated NVAPI bindings"
documentation = "https://github.com/sqooid/nvapi"
homepage = "https://github.com/sqooid/nvapi"
repository = "https://github.com/sqooid/nvapi"
license = "MIT"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.65.1"